--- a/css/products.css
+++ b/css/products.css
@@ -150,8 +150,8 @@ color: #2A7AE4;
   
   .products{
    
-    grid-template-columns: repeat(2, min-content);
-    margin-left: 2.5rem;
+    grid-template-columns: repeat(2, max-content);
+   
    
     
    
@@ -159,15 +159,17 @@ color: #2A7AE4;
      
   }
   .products__card{
+  
+    margin-left: 2rem;
+    width: 20rem;
     
-    width: 10rem;
    
     
     
   } 
 
   .products__img{
-    width: 180px;
+    width: 300px;
   }
   .products__categoria{
    
@@ -176,6 +178,6 @@ color: #2A7AE4;
   }
   .products__categoria--titleright{
     
-    margin-right: 6rem;
+    margin-right:28rem;
   }
 }
