--- a/css/banner.css
+++ b/css/banner.css
@@ -4,19 +4,19 @@
     background-image: url(../assets/banner-image.png); 
     background-repeat: no-repeat;
     background-size: 100% 97%;
-    height: 352px;
+    height:360px;
     overflow: hidden;
+    background-color: #F5F5F5;
 }
 
 .banner {
 display: flex;
 flex-direction: column;
-justify-content: flex-end;
-align-items: flex-start;
-margin-left: 14rem;
-margin-bottom: 2rem;
-gap: 16px;
-  }
+width:0 auto;
+justify-content: center;
+transform: translate(18%);
+
+}
 
   .banner h1 {
   margin-bottom: 2rem;
@@ -50,16 +50,13 @@ gap: 16px;
 
 /*-----------------------tablets-----------------------------*/
 @media screen and (max-width: 1024px) {
-  .container{
-    height: 250px;
-    background-size: 100%;
-    padding: 20px 20px 0px 20px;
-
-  }
+  
   .banner {
+   
+  
+    transform: translate(5%);
 
-      margin: 0;
-      margin-left: 6rem;  
+       
     }
 
   .banner h1  {
@@ -73,7 +70,8 @@ gap: 16px;
       margin-bottom: 1rem;  
     }
     .banner button {
-      margin-bottom: 1rem;
+      height: 1.5rem;
+	    width: 8rem;
       
       
     }
@@ -82,40 +80,34 @@ gap: 16px;
   }
 
   /*---------dispositivos moviles--------*/
-  @media screen and (max-width: 767px) {
-    
+  
+  @media screen and (max-width: 768px){
     .container{
-        
-      
-        background-size:100% 80%;
-       
-        }
-        
-        .banner {
+     
+      height:250px;
+    }
+  }
 
-            width: 400px;
-            height: 150px;
-            display: flex;
-            justify-content: flex-start;
-            margin-left:1rem ;
-            
-          
-            
-            
-          }
-      .banner h1  {
-        font-size:1.5rem;
-        
-      }
-      .banner h4 {
-        font-size: 1rem;  
-      }
-      .banner button {
-        align-items: center;
-        justify-content: center;
-        display: flex;
-        margin: 0.625rem;
-        width: 8rem; 
-        margin-top: -1rem; 
-      }  
-      }
+  @media screen and (max-width: 320px){
+    .container{
+     
+      height:150px;
+    }
+    .banner h1  {
+      font-size: 0.9rem;
+      
+      
+    }
+    .banner h4 {
+      
+      font-size: 0.76rem;
+      
+    }
+
+    .banner button {
+      width: 100px;
+      font-size: 10px;
+      
+    }
+
+  }
