--- a/css/banner.css
+++ b/css/banner.css
@@ -88,27 +88,26 @@ transform: translate(18%);
     }
   }
 
-  @media screen and (min-width: 614px) and (max-width: 767px){
-
+  @media screen and (max-width: 320px){
     .container{
      
       height:150px;
     }
-
     .banner h1  {
-      font-size: 1rem;
+      font-size: 0.9rem;
       
       
     }
     .banner h4 {
       
-      font-size: 1rem;
+      font-size: 0.76rem;
       
     }
 
     .banner button {
-      width: 100px;
-      font-size: 10px;
+      width: 150px;
+      size: 50px;
+      
       
     }
 
