--- a/css/banner.css
+++ b/css/banner.css
@@ -1,5 +1,6 @@
 .container{
   display: flex;
+  width: 100%;
 
     background-image: url(../assets/banner-image.png); 
     background-repeat: no-repeat;
@@ -50,6 +51,9 @@ transform: translate(18%);
 
 /*-----------------------tablets-----------------------------*/
 @media screen and (max-width: 1024px) {
+  .container{
+    
+    width: 100%;}
   
   .banner {
    
@@ -83,20 +87,45 @@ transform: translate(18%);
   
   @media screen and (max-width: 768px){
     .container{
+    
+      width: 100%;}
+    .container{
      
       height:250px;
     }
   }
 
-  @media screen and (max-width: 320px){
+  @media screen and (max-width: 600px){
+    .banner h1  {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;  
+      
+    }
+
+    .banner h4 {
+      
+      font-size: 1rem;
+      margin-bottom: 1rem;  
+    }
+
+    .banner button {
+      height: 2rem;
+	    width: 10em;
+      
+      
+    }
+
+
+  }
+
+  @media screen and (max-width: 412px){
     .container{
-     
+      width: 100%;
       height:150px;
     }
     .banner h1  {
       font-size: 0.9rem;
-      
-      
+       
     }
     .banner h4 {
       
