--- a/css/header.css
+++ b/css/header.css
@@ -181,7 +181,7 @@ nav{
   
   @media screen and (max-width: 412px){
     .header__busqueda{
-      
+      transform: translate(-100px);
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -196,24 +196,24 @@ nav{
 
     .header__btn-login{
       
-      transform: translate(-260px);   
+      transform: translate(-200px);   
       }
 
       .header__btn-login button{
-        transform: translateY(35px);
+        transform: translateY(30px);
         margin-left: 80px;
         
-        width: 60px;
-        height: 20px;
+        width: 80px;
+        height: 35px;
         font-size: 0.8rem;
 
       }
 
       .header__busqueda input{
        
-        margin-left:-20px;
+      margin-right: 40px;
        transform: translateY(20px);
-        width: 9rem;
+        width: 10rem;
         height: 1.5rem;
         background-position-x:7rem;
         background-color: var(--input-bg);
