--- a/css/banner.css
+++ b/css/banner.css
@@ -15,7 +15,8 @@ display: flex;
 flex-direction: column;
 width:0 auto;
 justify-content: center;
-transform: translate(18%);
+margin-left: 3rem;
+
 
 }
 
@@ -55,13 +56,7 @@ transform: translate(18%);
     
     width: 100%;}
   
-  .banner {
-   
-  
-    transform: translate(5%);
 
-       
-    }
 
   .banner h1  {
       font-size: 1.875rem;
@@ -118,26 +113,3 @@ transform: translate(18%);
 
   }
 
-  @media screen and (max-width: 412px){
-    .container{
-      width: 100%;
-      height:150px;
-    }
-    .banner h1  {
-      font-size: 0.9rem;
-       
-    }
-    .banner h4 {
-      
-      font-size: 0.76rem;
-      
-    }
-
-    .banner button {
-      width: 150px;
-      size: 50px;
-      
-      
-    }
-
-  }
