--- a/css/header.css
+++ b/css/header.css
@@ -9,24 +9,24 @@ nav{
     display: flex;
     height: 115px;
     align-items: center;
-    justify-content: space-between;
-    
+    justify-content: space-between;   
+}
+.nav__container{
+  
+  display: flex;
+  translate: -2.8rem;
 }
 /*contiene la barra de busqueda*/
 .header__busqueda{
     display: flex;
-    justify-content:space-around;
-    align-items: center;
-    margin-left: 13rem;
-    width: 600px;
-    transform: translate(-12%);
-       
+     margin-left: 6rem;
+    justify-content: flex-start;
+    width: 600px;       
 }
 
 /*---contiene logo y letras del titulo*/
 .header__logo{
-    display: flex ;
-    
+    display: flex ;  
     align-items: center;    
     
 }
@@ -45,8 +45,8 @@ nav{
   }
 
   .header__busqueda input{/*propiedades internas del input*/
-    transform: translate(20%);
-    width: 400px;
+    margin-left: 2rem;
+    width:100%;
     height: 30px;
     border-radius: 30px;
     padding: 1% 3%;
@@ -64,9 +64,9 @@ nav{
   /*---propiedades del boton login---*/
   .header__btn-login{
     display: flex;
-    width: 600px;
-    justify-content: end;
-    margin-right: 12rem;
+   
+    justify-content: flex-end;
+    
   }
  
   .header__btn-login button {
@@ -89,90 +89,50 @@ nav{
 /*-------------tablets-----------------*/
 
 @media screen and (max-width: 1024px) {
-
-  .header__busqueda{
-    transform: translate(-180px);
-  }
  
-
-    .header__busqueda input{
-      transform: translate(50px);
-    }
+} 
   
-  .header__busqueda input{
-      
-      margin-right: 3rem;
-      width: 18rem;
-      height: 2rem;
-      background-position-x: 11rem;
-     
-  }  
+.header__busqueda input{
+       
+          
+  margin-left: 5rem;
+  background-position-x: 285px;
+ 
   
-    .header__btn-login{
-     
-      width: 200px;
-      justify-content: end;
-      margin-right:5rem;
-     
-    }
-  }
-
+ 
+}
 
 
   
 /*--------------dispositivos moviles----------------*/
 
 @media screen and (max-width: 768px) {
-  
-  .header__busqueda{
-    transform: translate(-180px);
-   
+  .header__busqueda input{
+       
+       translate: -2rem;
+       background-position-x: 140px;
     
-    }
-
-    .header__btn-login{
-      
-      transform: translate(-160px);   
-      }
-
-      .header__busqueda input{
-       
-        background-color:#ffff;
-       transform: translate(360px);
-        width: 2rem;
-        height: 2rem;
-        background-position-x:0.5rem;
-       
-    }
-    input::placeholder {
-      color: transparent;
-
-    }
   }
+}
 
   @media screen and (max-width: 600px){
-    .header__busqueda{
-      transform: translate(-200px);
+
+    .header__busqueda input{
+       
      
       
-      }
-
-      .header__btn-login{
-      
-        transform: translate(-200px);   
-        }
-
-        .header__busqueda input{
-       
-          background-color:#ffff;
-         transform: translate(300px);
-          width: 2rem;
-          height: 2rem;
-          background-position-x:0.5rem;
-         
-      }
+        width: 2rem;
+        
+        background-position-x:0.5rem;
+        background-color: var(--input-bg);
+        
+    
 
   }
+  input::placeholder {
+    color: transparent;
+}
+}
 
 
 
@@ -180,8 +140,11 @@ nav{
   
   
   @media screen and (max-width: 412px){
+    .nav__container{
+      width: 0 auto;
+    }
     .header__busqueda{
-      transform: translate(-100px);
+     
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -226,4 +189,3 @@ nav{
    
 
   }
-    
