--- a/css/products.css
+++ b/css/products.css
@@ -11,23 +11,34 @@
     flex-direction: row;
    
     
-}
+}/*
 .products{
   display: grid;
   justify-content:center;
   grid-template-columns: repeat(6, max-content);
   gap: 1rem; 
   padding-bottom: 50px; 
+}*/
+.products{
+  width: 100%;
+  display: grid;
+  grid-auto-rows: 25rem;
+  grid-template-columns: repeat(auto-fill, minmax(min(100%,25rem), 1fr));
+  gap:1rem;
+  padding-bottom: 2rem;
+  
+  
 }
 .products__card{
+  margin-left: 3rem;
   cursor: pointer; 
   background-color:#fff;
   border: 2px solid rgba(8, 8, 8, 0.479);
-  padding: 1.25rem;
+  padding: 1rem;
   border-radius:1rem;
-  width: 14rem;
+  width: 20rem;
+  
 } 
-
 
 .products__card:hover{
   transform: scale(1.1);
@@ -35,9 +46,11 @@
 }
 
 .products__categoria{
-  align-items: center;
+ 
   display: flex;
-  justify-content:center;
+  align-items: center;
+  justify-content: space-between;
+ margin: 4rem;
   margin-top: 3rem;
   margin-bottom: 3rem;
   color: #464646;
@@ -46,12 +59,13 @@
 
 .products__categoria--titleright{
   
+  
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
   line-height: 38px;
-  transform: translate(-600px);
+  
   
 }
 
@@ -63,7 +77,7 @@ font-weight: 700;
 font-size: 20px;
 line-height: 19px;
 color: #2A7AE4;
-transform: translate(540px);
+
 
 }
 
@@ -116,7 +130,50 @@ line-height: 19px;
 
 color: #2A7AE4;
 }
+@media screen and (max-width: 768px){
+  .products{
+    grid-template-columns: repeat(2, max-content);
+    gap: 2rem;
+     
+  }
+  .products__card{
+    width: 16rem;
+    
+   }
+   .products__categoria{
+    width: max-content;
+    
+   }
 
+   .products__categoria--titleleft{
+    margin-left: 20rem;
+   }
+
+}
+
+@media screen and (max-width: 600px){
+
+  .products{
+    grid-template-columns: repeat(2, max-content);
+    grid-auto-rows: 18rem;
+    gap: 0.8rem;
+    width: min-content;
+     
+  }
+
+  .products__card{
+    width: 12rem;
+    
+    
+   }
+
+   .products__categoria--titleleft{
+    margin-left: 11rem;
+   }
+  
+}
+
+/*
 @media screen and (max-width: 1024px){
   .products{
     grid-template-columns: repeat(4, max-content);
@@ -140,73 +197,11 @@ color: #2A7AE4;
    
 }
 
-@media screen and (max-width: 768px){
-  .products{
-    grid-template-columns: repeat(2, max-content);
-    gap: 2rem;
-     
-  }
-  .products__card{
-    width: 18rem;
-    
-   }
-
-  .products__categoria--titleleft{
-    transform: translate(160px);
-  }
-  .products__categoria--titleright{
-    transform: translate(-200px);
-  }
-
-}
-
-@media screen and (max-width: 600px){
-
-  .products{
-    grid-template-columns: repeat(2, max-content);
-    gap: 0.8rem;
-     
-  }
-
-  .products__card{
-    width: 15rem;
-    
-   }
-
-   .products__categoria--titleleft{
-    transform: translate(90px);
-  }
-
-  .products__categoria--titleright{
-    transform: translate(-130px);
-  }
 
 
 
-}
-
-@media screen and (max-width: 412px){
-  .products{
-    width: 412px;
-    grid-template-columns: repeat(1, max-content);
-    gap: 2rem;
-    
-     
-  }
-  .products__card{
-    width: 15rem;
-    
-   }
-
-  .products__categoria--titleleft{
-    transform: translate(-2rem);
-  }
-  .products__categoria--titleright{
-    transform: translate(-9rem);
-  }
 
 
-}
 
-
+*/
 
