--- a/css/footer.css
+++ b/css/footer.css
@@ -120,6 +120,7 @@ footer{
   .footer__social {
     background-color: var(--white_100);
     display: flex;
+    flex-direction: row;
     justify-content: center;
     column-gap: 1.3rem;
 }
