--- a/css/footer.css
+++ b/css/footer.css
@@ -143,7 +143,8 @@ footer{
     display: block;
     color: #464646;
     text-align: center;
-    font-size:3rem;
+    font-size:1rem;
+    margin-top: 0.5rem;
 }
 
   /*medias query*/
