--- a/css/footer.css
+++ b/css/footer.css
@@ -143,8 +143,8 @@ footer{
     display: block;
     color: #464646;
     text-align: center;
-    font-size:1rem;
-    margin-top: 0.5rem;
+    font-size:0.5rem;
+    padding-top:0.8rem ;
 }
 
   /*medias query*/
