--- a/css/footer.css
+++ b/css/footer.css
@@ -143,7 +143,7 @@ footer{
     display: block;
     color: #464646;
     text-align: center;
-    font-size:0.5rem;
+    font-size: 16px;
     padding-top:0.8rem ;
 }
 
