--- a/css/footer.css
+++ b/css/footer.css
@@ -118,7 +118,7 @@ footer{
 
  
   .footer__social {
-    padding-top:1rem ;
+    padding-top: 0.5rem;
     display: flex;
     justify-content: center;
     column-gap: 1.3rem;
@@ -142,7 +142,8 @@ footer{
     display: block;
     color: #464646;
     text-align: center;
-    font-size: 10px;
+    font-size: 15px;
+    padding-top: 10px;
     
 }
 
