--- a/css/header.css
+++ b/css/header.css
@@ -6,22 +6,23 @@ header{
 /*contiene los elementos logo barra de busqueda y boton login*/
 nav{
     
-    display: flex;
+    
     height: 115px;
     align-items: center;
-    justify-content: space-between;   
+      
 }
 .nav__container{
   
   display: flex;
-  translate: -2.8rem;
+  max-width: 2560px;
+  
 }
 /*contiene la barra de busqueda*/
 .header__busqueda{
-    display: flex;
-     margin-left: 6rem;
-    justify-content: flex-start;
-    width: 600px;       
+  display: flex;
+  margin: 5rem;
+  justify-content: space-between;
+  width: 2650px;     
 }
 
 /*---contiene logo y letras del titulo*/
@@ -45,19 +46,15 @@ nav{
   }
 
   .header__busqueda input{/*propiedades internas del input*/
-    margin-left: 2rem;
-    width:100%;
+    width: 40%;
     height: 30px;
     border-radius: 30px;
     padding: 1% 3%;
     border: none;
-
-    /*propiedades de la lupa*/
     background-color: var(--input-bg);
-    background-image: url("../assets/lupa.png");
+    background-image: url(../assets/lupa.png);
     background-repeat: no-repeat;
     background-position: right;
-    background-position-x: 350px;
   }
 
 
@@ -86,106 +83,17 @@ nav{
 
 
 
-/*-------------tablets-----------------*/
-
-@media screen and (max-width: 1024px) {
- 
-} 
-  
-.header__busqueda input{
-       
-          
-  margin-left: 5rem;
-  background-position-x: 285px;
- 
-  
- 
-}
-
+/*-------------MEDIA QUERY-----------------*/
 
   
 /*--------------dispositivos moviles----------------*/
 
 @media screen and (max-width: 768px) {
-  .header__busqueda input{
-       
-       translate: -2rem;
-       background-position-x: 140px;
+  .header__busqueda {
     
-  }
-}
-
-  @media screen and (max-width: 600px){
-
-    .header__busqueda input{
-       
-     
-      
-        width: 2rem;
-        
-        background-position-x:0.5rem;
-        background-color: var(--input-bg);
-        
-    
-
-  }
-  input::placeholder {
-    color: transparent;
+    margin: 1rem;
+    column-gap: 1rem;
 }
 }
-
-
-
 
   
-  
-  @media screen and (max-width: 412px){
-    .nav__container{
-      width: 0 auto;
-    }
-    .header__busqueda{
-     
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      
-    }
-    .header__titulo a{
-      font-size: 1.5rem;
-    }
-    .header__subtitle{
-      font-size: 1rem;
-    }
-
-    .header__btn-login{
-      
-      transform: translate(-200px);   
-      }
-
-      .header__btn-login button{
-        transform: translateY(30px);
-        margin-left: 80px;
-        
-        width: 80px;
-        height: 35px;
-        font-size: 0.8rem;
-
-      }
-
-      .header__busqueda input{
-       
-      margin-right: 40px;
-       transform: translateY(20px);
-        width: 10rem;
-        height: 1.5rem;
-        background-position-x:7rem;
-        background-color: var(--input-bg);
-       
-    }
-    input::placeholder {
-      color:#13131388;
-
-    }
-   
-
-  }
