--- a/css/banner.css
+++ b/css/banner.css
@@ -1,115 +1,112 @@
-.container{
+.container {
   display: flex;
   width: 100%;
-
-    background-image: url(../assets/banner-image.png); 
-    background-repeat: no-repeat;
-    background-size: 100% 97%;
-    height:360px;
-    overflow: hidden;
-    background-color: #F5F5F5;
+  background-image: url(../assets/banner-image.png);
+  background-repeat: no-repeat;
+  background-size: 100% 97%;
+  height: 500px;
+  overflow: hidden;
+  background-color: #F5F5F5;
 }
 
 .banner {
-display: flex;
-flex-direction: column;
-width:0 auto;
-justify-content: center;
-margin-left: 3rem;
+  display: flex;
+  flex-direction: column;
+  width: 0 auto;
+  justify-content: center;
+  margin-left: 3rem;
 
 
 }
 
-  .banner h1 {
+.banner h1 {
   margin-bottom: 2rem;
-	color: var(--texto-destaque);
-	font-size: 3.25rem;
-	font-weight: bold;
-	text-shadow: 2px 2px 0px #323131, 5px 4px 0px rgb(0 0 0 / 15%);
-  }
-  .banner h4 {
-	color: var(--texto-destaque);
-  margin-bottom: 2rem;
-	font-size: 2rem;
-	font-weight: bold;
-	text-shadow: 2px 2px 0px #323131, 5px 4px 0px rgb(0 0 0 / 15%);
-  }
-  .banner button {
-	background-color: var(--azul-destaque);
- 
-	border: none;
-	color: var(--texto-destaque);
-	height: 3.2rem;
-	width: 8.13rem;
-  cursor: pointer;
-  }
+  color: var(--texto-destaque);
+  font-size: 3.25rem;
+  font-weight: bold;
+  text-shadow: 2px 2px 0px #323131, 5px 4px 0px rgb(0 0 0 / 15%);
+}
 
-  .banner button:hover {
-	background-color: var(--texto-destaque);
-	color: black;
-    transition:1.1s ;
-  }
+.banner h4 {
+  color: var(--texto-destaque);
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  font-weight: bold;
+  text-shadow: 2px 2px 0px #323131, 5px 4px 0px rgb(0 0 0 / 15%);
+}
+
+.banner button {
+  background-color: var(--azul-destaque);
+
+  border: none;
+  color: var(--texto-destaque);
+  height: 3.2rem;
+  width: 8.13rem;
+  cursor: pointer;
+}
+
+.banner button:hover {
+  background-color: var(--texto-destaque);
+  color: black;
+  transition: 1.1s;
+}
 
 /*-----------------------tablets-----------------------------*/
 @media screen and (max-width: 1024px) {
-  .container{
-    
-    width: 100%;}
-  
 
+  .banner h1 {
+    font-size: 1.875rem;
+    margin-bottom: 1rem;
 
-  .banner h1  {
-      font-size: 1.875rem;
-      margin-bottom: 1rem;  
-      
-    }
-    .banner h4 {
-      
-      font-size: 1.563rem;
-      margin-bottom: 1rem;  
-    }
-    .banner button {
-      height: 1.5rem;
-	    width: 8rem;
-      
-      
-    }
-
-  
   }
 
-  /*---------dispositivos moviles--------*/
-  
-  @media screen and (max-width: 768px){
-    .container{
-    
-      width: 100%;}
-    .container{
-     
-      height:250px;
-    }
+  .banner h4 {
+
+    font-size: 1.563rem;
+    margin-bottom: 1rem;
   }
 
-  @media screen and (max-width: 600px){
-    .banner h1  {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;  
-      
-    }
-
-    .banner h4 {
-      
-      font-size: 1rem;
-      margin-bottom: 1rem;  
-    }
-
-    .banner button {
-      height: 2rem;
-	    width: 10em;
-      
-      
-    }
+  .banner button {
+    height: 1.5rem;
+    width: 8rem;
 
 
   }
 
+
+}
+
+/*---------dispositivos moviles--------*/
+
+@media screen and (max-width: 768px) {
+  .container {
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .banner {
+    margin-left: 1rem;
+  }
+
+  .container {
+    height: 200px;
+  }
+
+  .banner h1 {
+    font-size: 1.8rem;
+
+
+  }
+
+  .banner h4 {
+
+    font-size: 1rem;
+  }
+
+  .banner button {
+    height: 2rem;
+    width: 10em;
+
+  }
+}
