--- a/css/header.css
+++ b/css/header.css
@@ -1,134 +1,142 @@
 /*contenedor principal donde se encuentran todos los elementos del header*/
-header{
-  
-    background-color: var(--texto-destaque);
+header {
+
+  background-color: var(--texto-destaque);
 }
+
 /*contiene los elementos logo barra de busqueda y boton login*/
-nav{
-    
-    
-    height: 115px;
-    align-items: center;
-      
+nav {
+
+
+  height: 115px;
+  align-items: center;
+
 }
-.nav__container{
-  
+
+.nav__container {
+
   display: flex;
   max-width: 2560px;
-  
+
 }
+
 /*contiene la barra de busqueda*/
-.header__busqueda{
+.header__busqueda {
   display: flex;
   margin: 5rem;
   justify-content: space-between;
-  width: 2650px;     
+  width: 2650px;
 }
 
 /*---contiene logo y letras del titulo*/
-.header__logo{
-    display: flex ;  
-    align-items: center;    
-    
+.header__logo {
+  display: flex;
+  align-items: center;
+
 }
 
 .header__logo p {
-    cursor: pointer;
-    font-size: 30px;
-    font-weight: bolder;
-  }
-  .header__logo a{
-    text-decoration: none;
-    color: var(--azul-destaque);
-  }
-  .header__subtitle{
-    color: black;
-  }
+  cursor: pointer;
+  font-size: 30px;
+  font-weight: bolder;
+}
 
-  .header__busqueda input{/*propiedades internas del input*/
-    width: 40%;
-    height: 30px;
-    border-radius: 30px;
-    padding: 1% 3%;
-    border: none;
-    background-color: var(--input-bg);
-    background-image: url(../assets/lupa.png);
-    background-repeat: no-repeat;
-    background-position: right;
-  }
+.header__logo a {
+  text-decoration: none;
+  color: var(--azul-destaque);
+}
+
+.header__subtitle {
+  color: black;
+}
+
+.header__busqueda input {
+  /*propiedades internas del input*/
+  width: 40%;
+  height: 30px;
+  border-radius: 30px;
+  padding: 1% 3%;
+  border: none;
+  background-color: var(--input-bg);
+  background-image: url(../assets/lupa.png);
+  background-repeat: no-repeat;
+  background-position: right;
+}
 
 
-  /*---propiedades del boton login---*/
-  .header__btn-login{
-    display: flex;
-   
-    justify-content: flex-end;
-    
-  }
- 
-  .header__btn-login button {
-    width: 160px;
-    height: 40px;
-    background: none;
-    border: solid 2px var(--azul-destaque);
-    color: var(--azul-destaque);
-    text-transform: uppercase;
-    cursor: pointer;
-  }
-  .header__btn-login button:hover{
-    background-color: var(--azul-destaque);
-    color: var(--texto-destaque);
-    transition: 1.1s;
-  }
+/*---propiedades del boton login---*/
+.header__btn-login {
+  display: flex;
+
+  justify-content: flex-end;
+
+}
+
+.header__btn-login button {
+  width: 160px;
+  height: 40px;
+  background: none;
+  border: solid 2px var(--azul-destaque);
+  color: var(--azul-destaque);
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.header__btn-login button:hover {
+  background-color: var(--azul-destaque);
+  color: var(--texto-destaque);
+  transition: 1.1s;
+}
 
 
 
 /*-------------MEDIA QUERY-----------------*/
 
-  
+
 /*--------------dispositivos moviles----------------*/
 
 @media screen and (max-width: 768px) {
   .header__busqueda {
-    
+
     margin: 1rem;
     column-gap: 1rem;
-}
+  }
 }
 
 @media screen and (max-width: 425px) {
   .header__busqueda {
-    
-    margin:0;
-    column-gap:0;
+
+    margin: 0;
+    column-gap: 0;
     justify-content: space-around;
-}
+  }
 
-.header__logo p {
-  
-  font-size: 20px;
-  
-}
-.header__busqueda input {
-  width: 40%; 
-}
+  .header__logo p {
 
-.header__btn-login button {
-  width: 80px;
-}
+    font-size: 20px;
+
+  }
+
+  .header__busqueda input {
+    width: 40%;
+  }
+
+  .header__btn-login button {
+    width: 80px;
+  }
 }
 
 @media screen and (max-width: 375px) {
-  
-.header__logo p {
-  
-  font-size: 15px;
-  
+
+  .header__logo p {
+
+    font-size: 15px;
+
+  }
+
+  .header__busqueda input {
+    width: 27%;
+  }
+
+
 }
-.header__busqueda input {
-  width: 27%;
-}
-
-
-
-  
