--- a/css/products.css
+++ b/css/products.css
@@ -5,23 +5,17 @@
   display: grid;
   
  }
-/*
-.products{
-  display: grid;
-  justify-content:center;
-  grid-template-columns: repeat(6, max-content);
-  gap: 1rem; 
-  padding-bottom: 50px; 
-}*/
-.products{
-  width: 100%;
-  display: grid;
-  grid-auto-rows: 25rem;
-  grid-template-columns: repeat(auto-fill, minmax(min(100%,25rem), 1fr));
-  gap:1rem;
-  padding-bottom: 2rem;
-  
-  
+
+ .products {
+  align-items: center;
+    justify-content: center;
+    display: grid;
+    grid-auto-rows: 25rem;
+    grid-template-columns: repeat(auto-fill, minmax(min(100%,22rem),1fr));
+    gap: 1rem;
+    padding-bottom: 2rem;
+    justify-content: space-evenly;
+    margin-left: 6rem;
 }
 .products__categoria{
  
@@ -126,27 +120,41 @@ line-height: 19px;
 
 color: #2A7AE4;
 }
+
+@media screen and (max-width: 1440px){
+  .products {
+   
+    
+    grid-template-columns: repeat(auto-fill, minmax(min(100%,20rem),1fr));
+    margin-left: 2rem;
+}
+
+
+}
+
 @media screen and (max-width: 768px){
   .products{
-    grid-template-columns: repeat(2, max-content);
+    grid-template-columns: repeat(3, max-content);
     gap: 2rem;
+    justify-content: space-around;
+    grid-auto-rows: 0;
+    padding-bottom: 2rem;
+    justify-content: space-evenly;
+    margin-left:0; 
+  
      
   }
   .products__card{
-    width: 16rem;
+    width: 13rem;
     
    }
    .products__categoria {
     margin-top: 3rem;
     margin-bottom: 3rem;
-    color: #464646;
     font-size: 1rem;
     
 }
 
-   .products__categoria--titleleft{
-    margin-left: 20rem;
-   }
 
 }
 
@@ -157,6 +165,8 @@ color: #2A7AE4;
     grid-auto-rows: 18rem;
     gap: 0.8rem;
     width: min-content;
+    justify-content: space-around;
+}
      
   }
 
