--- a/css/products.css
+++ b/css/products.css
@@ -3,21 +3,25 @@
   margin: 0;
   background-color: #F5F5F5;
   display: grid;
+  width: 100%;
   
+ }
+ .main__body{
+  width: 100%;
  }
 
  .products {
   width: 100%;
     grid-area: revert;
-    /* justify-content: center; */
+    
     display: grid;
     /* gap: 1rem; */
-    grid-auto-rows: 25rem;
-    grid-template-columns: repeat(auto-fill, minmax(min(100%,25rem),1fr));
-    gap: 1rem;
-    padding-bottom: 2rem;
+    grid-auto-rows: 20rem;
+    grid-template-columns: repeat(auto-fill, minmax(min(100%,14rem),1fr));
+    gap: 2rem;
+    padding-bottom: 1rem;
     justify-content: space-evenly;
-    margin-left: 2.6rem;
+    margin-left: 0.8rem;
 }
 
 
@@ -41,7 +45,7 @@
   border: 2px solid rgba(8, 8, 8, 0.479);
   padding: 1rem;
   border-radius:1rem;
-  width: 20rem;
+  width: 15rem;
   
 } 
 
@@ -127,14 +131,15 @@ color: #2A7AE4;
 
 @media screen and (max-width: 1440px){
   .products {    
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(min(100%,12rem),1fr));
-    display: grid;
+    width: auto;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%,12rem),1fr));
+   
     grid-auto-rows: 18rem;
-    gap: 1rem;
     padding-bottom: 2rem;
-    margin-left: 6rem;
+    margin-left: 1rem;
+}
+.products__card {
+  width: 13rem;
 }
 
 
@@ -142,14 +147,15 @@ color: #2A7AE4;
 
 @media screen and (max-width: 1024px){
   .products{
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(min(100%,12rem),1fr));
+   
+    grid-template-columns: repeat(4, min-content);
     display: grid;
     grid-auto-rows: 18rem;
-    gap: 1rem;
+   
+   
     padding-bottom: 2rem;
-    margin-left: 4rem;
+    gap: 1.2rem;
+    
   }
   .products__card {
     width: 12rem;
@@ -159,7 +165,7 @@ color: #2A7AE4;
 @media screen and (max-width: 768px){
   .products{
     grid-template-columns: repeat(3, max-content);
-    gap: 2rem;
+    gap: 1rem;
     justify-content: space-around;
     grid-auto-rows: 18rem;
     padding-bottom: 2rem;
@@ -169,7 +175,7 @@ color: #2A7AE4;
      
   }
   .products__card{
-    width: 10rem;
+    width: 12rem;
     
    }
    .products__categoria {
@@ -187,12 +193,11 @@ color: #2A7AE4;
   .products{
     grid-template-columns: repeat(2, max-content);
     grid-auto-rows: 18rem;
-    gap: 0.8rem;
-    width: min-content;
-    justify-content: space-around;
+    gap: 2rem;
+   
 }
      
-  }
+  
 
   .products__card{
     width: 12rem;
@@ -203,6 +208,49 @@ color: #2A7AE4;
    .products__categoria--titleleft{
     margin-left: 11rem;
    }
+  
+}
+
+@media screen and (max-width: 425px){
+  main.main__body{
+   
+    display: contents;
+  }
+  
+
+  .products{
+  
+    grid-template-columns: repeat(1, max-content);
+    grid-auto-rows: 22rem;   
+}
+.products__card{
+  width: 18rem;
+  
+  
+ }
+     
+  
+
+   .products__categoria{
+ 
+    
+    justify-content: space-around;
+    margin: 0;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    color: #464646;
+    font-size: 1rem;
+    
+    
+  }
+
+   .products__categoria--titleleft{
+    margin-left:-2rem;
+   }
+   .products__categoria--titleright{
+    margin-left:-2rem;
+   }
+   
   
 }
 
