--- a/css/products.css
+++ b/css/products.css
@@ -16,12 +16,13 @@
     
     display: grid;
     /* gap: 1rem; */
-    grid-auto-rows: 20rem;
+    grid-auto-rows: 22rem;
     grid-template-columns: repeat(auto-fill, minmax(min(100%,14rem),1fr));
     gap: 2rem;
     padding-bottom: 1rem;
     justify-content: space-evenly;
     margin-left: 0.8rem;
+    margin-bottom: 1rem;
 }
 
 
