--- a/css/products.css
+++ b/css/products.css
@@ -214,6 +214,7 @@ color: #2A7AE4;
 
 @media screen and (max-width: 425px){
   main.main__body{
+    background-color: #F5F5F5
    
     display: contents;
   }
