--- a/css/products.css
+++ b/css/products.css
@@ -1,7 +1,7 @@
  main{
   padding: 0;
   margin: 0;
-  background-color: #F5F5F5;
+  background-color: #f4f4f4 ;
   display: grid;
   width: 100%;
   
