--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,40 @@
   --header-height: 3rem;
   --input-placeholder: #d4d4d4;
   --input-bg: #efefef;
-  --texto-destaque: #ffff;
+  --texto-destaque:   #ffff ;
   --azul-destaque: #2a7ae4;
   --bg-contato: #eaf2fd;
   font-family: "Releway", sans-serif;
   --white_footer: #EAF2FD;
+  --contrast-light-color: rgba(23, 18, 18, 0.899);
+  --shadow: 0 5px 10px #55a6ff38;
+  --font-size-card-title: 28px;
+  --font-size-input-label: 20px;
+  --font-size-button: 22px;
+  --font-size-form-fieldset: 22px;
+  --font-size-table-header: 22px;
+  --font-size-modal-title: 28px;
+  --font-size-modal-button: 28px;
+
+  --font-weigth-input: 300;
+
+  --font-size-logo: 28px;
+  --font-size-card-title: 28px;
+  --font-size-input-label: 20px;
+  --font-size-button: 22px;
+  --font-size-form-fieldset: 22px;
+  --font-size-table-header: 22px;
+  --font-size-modal-title: 28px;
+  --font-size-modal-button: 28px;
+
+  --primary-color: #0071ea;
+  --secondary-color: #d6eaff;
+  --contrast-dark-color: #4d4d4d;
+
+  --contrast-light-color: #fff;
+  --warning-color: #df2525;
+  --success-color: #047900;
+  --transparency-color: #4d4d4d33;
+
+  --shadow: 0 5px 10px #55a6ff38;
 }
